--- a/source/mjml/index.mjml
+++ b/source/mjml/index.mjml
@@ -34,6 +34,8 @@
 
     <mj-include path="views/views-header.mjml" />
 
+    <mj-include path="views/views-tile.mjml" />
+
     <mj-include path="views/views-footer.mjml" />
 
   </mj-wrapper>
