--- a/source/mjml/global/attributes.mjml
+++ b/source/mjml/global/attributes.mjml
@@ -171,7 +171,46 @@
                                              background-color="#202020"
                                              color="#efefef"/>
 
-  <mj-class name="info"                      background-color="#d6383d"
+  <mj-class name="views-tile"                background-color="#d6383d"
                                              color="#efefef"/>
+
+  <mj-class name="views-tile__column"        vertical-align="middle"/>
+
+  <mj-class name="sep"                       background-color="#efefef"
+                                             padding-bottom="20px"/>
+
+  <mj-class name="rtl"                       direction="rtl"/>
+
+  <!-- best discounts -->
+
+  <mj-class name="views-best-disc"                 background-color="#efefef"/>
+
+  <mj-class name="views-best-disc__column"         width="300px"/>
+
+  <mj-class name="views-best-disc__img-prev"       width="220px"/>
+
+  <mj-class name="views-best-disc__img"            width="180px"/>
+
+  <mj-class name="head"                            font-family="Oswald, Verdana, Geneva, sans-serif"
+                                                   font-size="22px"
+                                                   font-style="normal"
+                                                   font-weight="700"
+                                                   line-height="34px"
+                                                   text-align="center"
+                                                   text-transform="uppercase"
+                                                   color="#202020"
+                                                   padding="4px 20px"/>
+
+  <mj-class name="views-best-disc__btn"            font-family="Verdana, Geneva, sans-serif"
+                                                   font-size="16px"
+                                                   font-size="normal"
+                                                   font-weight="700"
+                                                   line-height="26px"
+                                                   text-align="center"
+                                                   border-radius="0px"
+                                                   text-transform="uppercase"
+                                                   background-color="#202020"
+                                                   color="#efefef"
+                                                   padding="10px 20px"/>
 
 </mj-attributes>
