--- a/source/mjml/views/views-tile.mjml
+++ b/source/mjml/views/views-tile.mjml
@@ -4,8 +4,8 @@
   <mj-column mj-class="views-tile__column"
             css-class="views-tile__column">
 
-    <mj-image mj-class="views-tile__img-guitar pt10 pb20 alt-img"
-              css-class="views-tile__img-guitar pt10 pb20 alt-img"
+    <mj-image mj-class="views-tile__img alt-img"
+              css-class="views-tile__img alt-img"
 
               src="{{{views-tile__img-guitar.src}}}"
               href="{{{views-tile__img-guitar.href}}}"
@@ -13,8 +13,8 @@
               alt="{{{views-tile__img-guitar.alt}}}" />
   </mj-column>
 
-  <mj-column mj-class="views-tile__column info"
-            css-class="views-tile__column info">
+  <mj-column mj-class="views-tile__column"
+            css-class="views-tile__column">
 
     <mj-text mj-class="views-tile_caption"
             css-class="views-tile_caption">
@@ -35,23 +35,29 @@
 
 </mj-section>
 
-<mj-section mj-class="views-tile"
-          css-class="views-tile">
+<mj-section>
+        <mj-column mj-class="views-tile__column sep"
+                   css-class="views-tile__column sep">
+
+  </mj-column>
+</mj-section>
+<mj-section mj-class="views-tile rtl"
+          css-class="views-tile rtl">
 
   <mj-column mj-class="views-tile__column"
             css-class="views-tile__column">
 
-    <mj-image mj-class="views-tile__img-guitar pt10 pb20 alt-img"
-              css-class="views-tile__img-guitar pt10 pb20 alt-img"
+    <mj-image mj-class="views-tile__img alt-img"
+              css-class="views-tile__img alt-img"
 
-              src="{{{views-tile__img-guitar.src}}}"
-              href="{{{views-tile__img-guitar.href}}}"
-              title="{{{views-tile__img-guitar.title}}}"
-              alt="{{{views-tile__img-guitar.alt}}}" />
+              src="{{{views-tile__img-piano.src}}}"
+              href="{{{views-tile__img-piano.href}}}"
+              title="{{{views-tile__img-piano.title}}}"
+              alt="{{{views-tile__img-piano.alt}}}" />
   </mj-column>
 
-  <mj-column mj-class="views-tile__column info"
-            css-class="views-tile__column info">
+  <mj-column mj-class="views-tile__column"
+            css-class="views-tile__column">
 
     <mj-text mj-class="views-tile_caption"
             css-class="views-tile_caption">
@@ -72,23 +78,30 @@
 
 </mj-section>
 
+<mj-section>
+        <mj-column mj-class="views-tile__column sep"
+                   css-class="views-tile__column sep">
+
+  </mj-column>
+</mj-section>
+
 <mj-section mj-class="views-tile"
           css-class="views-tile">
 
   <mj-column mj-class="views-tile__column"
             css-class="views-tile__column">
 
-    <mj-image mj-class="views-tile__img-guitar pt10 pb20 alt-img"
-              css-class="views-tile__img-guitar pt10 pb20 alt-img"
+    <mj-image mj-class="views-tile__img alt-img"
+              css-class="views-tile__img alt-img"
 
-              src="{{{views-tile__img-guitar.src}}}"
-              href="{{{views-tile__img-guitar.href}}}"
-              title="{{{views-tile__img-guitar.title}}}"
-              alt="{{{views-tile__img-guitar.alt}}}" />
+              src="{{{views-tile__img-mic.src}}}"
+              href="{{{views-tile__img-mic.href}}}"
+              title="{{{views-tile__img-mic.title}}}"
+              alt="{{{views-tile__img-mic.alt}}}" />
   </mj-column>
 
-  <mj-column mj-class="views-tile__column info"
-            css-class="views-tile__column info">
+  <mj-column mj-class="views-tile__column"
+            css-class="views-tile__column">
 
     <mj-text mj-class="views-tile_caption"
             css-class="views-tile_caption">
@@ -107,4 +120,10 @@
     </mj-button>
   </mj-column>
 
+</mj-section>
+<mj-section>
+        <mj-column mj-class="views-tile__column sep"
+                   css-class="views-tile__column sep">
+
+  </mj-column>
 </mj-section>
