--- a/source/mjml/global/style.mjml
+++ b/source/mjml/global/style.mjml
@@ -18,6 +18,11 @@
   background-color: #d6383d !important;
 }
 
+.views-category__btn > table > tbody :hover{
+  background-color: #d6383d !important;
+  color: #ffffff !important;
+}
+
 .views-header__btn > table > tbody :hover{
   background-color: #d6383d !important;
 }
