--- a/source/mjml/index.mjml
+++ b/source/mjml/index.mjml
@@ -38,6 +38,8 @@
 
     <mj-include path="views/views-best-disc.mjml" />
 
+    <mj-include path="views/views-category.mjml" />
+
     <mj-include path="views/views-footer.mjml" />
 
   </mj-wrapper>
