--- a/source/mjml/global/style-inline.mjml
+++ b/source/mjml/global/style-inline.mjml
@@ -101,6 +101,11 @@
     color: #202020;
 }
 
+  .views-footer__img-students{
+    border-left: 1px solid #000000;
+    border-right: 1px solid #000000;
+}
+
 
   /* blocks */
 
