--- a/source/mjml/views/views-footer.mjml
+++ b/source/mjml/views/views-footer.mjml
@@ -3,6 +3,94 @@
 
   <mj-column mj-class="views-footer__column"
               css-class="views-footer__column">
+
+      <mj-image mj-class="views-footer__img-div alt-img"
+            css-class="views-footer__img-div alt-img"
+
+            src="{{{views-footer__img-div.src}}}"
+            title="{{{views-footer__img-div.title}}}"
+            alt="{{{views-footer__img-div.alt}}}" />
+
+  </mj-column >
+
+</mj-section>
+
+<mj-section mj-class="views-footer__advantages"
+            css-class="views-footer__advantages">
+
+  <mj-column mj-class="views-footer__column-delivery"
+              css-class="views-footer__column-delivery">
+
+
+      <mj-image mj-class="views-footer__img-delivery alt-img"
+      css-class="views-footer__img-delivery alt-img"
+
+      src="{{{views-footer__img-delivery.src}}}"
+      title="{{{views-footer__img-delivery.title}}}"
+      alt="{{{views-footer__img-delivery.alt}}}" />
+
+      <mj-text mj-class="views-footer__caption"
+               css-class="views-footer__caption">
+            FREE DELIVERY
+      </mj-text>
+
+
+  </mj-column >
+
+  <mj-column mj-class="views-footer__column-students"
+              css-class="views-footer__column-students">
+
+      <mj-image mj-class="views-footer__img-students alt-img"
+      css-class="views-footer__img-students alt-img"
+
+      src="{{{views-footer__img-students.src}}}"
+      title="{{{views-footer__img-students.title}}}"
+      alt="{{{views-footer__img-students.alt}}}" />
+
+      <mj-text mj-class="views-footer__caption"
+               css-class="views-footer__caption">
+            STUDENTS 10% OFF
+      </mj-text>
+
+  </mj-column >
+
+  <mj-column mj-class="views-footer__column-return"
+              css-class="views-footer__column-return">
+
+      <mj-image mj-class="views-footer__img-return alt-img"
+      css-class="views-footer__img-return alt-img"
+
+      src="{{{views-footer__img-return.src}}}"
+      title="{{{views-footer__img-return.title}}}"
+      alt="{{{views-footer__img-return.alt}}}" />
+
+      <mj-text mj-class="views-footer__caption"
+               css-class="views-footer__caption">
+            FREE RETURNS
+      </mj-text>
+
+  </mj-column >
+
+</mj-section>
+
+<mj-section mj-class="views-footer pb10 pt10"
+            css-class="views-footer pb10 pt10">
+
+  <mj-column mj-class="views-footer__column"
+              css-class="views-footer__column">
+
+      <mj-image mj-class="views-footer__img-logo alt-img"
+            css-class="views-footer__img-logo alt-img"
+
+            src="{{{views-footer__img-logo.src}}}"
+            title="{{{views-footer__img-logo.title}}}"
+            alt="{{{views-footer__img-logo.alt}}}" />
+
+  </mj-column >
+
+<mj-column mj-class="views-footer__column"
+            css-class="views-footer__column">
+
         <mj-social mj-class="views-footer__social"
                    css-class="views-footer__social">
           <mj-social-element src="https://i.postimg.cc/8kXsNSNw/img-tech-facebook.png" href="https://mjml.io/"/>
@@ -14,9 +102,19 @@
   <mj-column mj-class="views-footer__column"
               css-class="views-footer__column">
 
+  </mj-column >
+
+</mj-section>
+
+<mj-section mj-class="views-footer pb10 pt10"
+            css-class="views-footer pb10 pt10">
+
+  <mj-column mj-class="views-footer__column"
+              css-class="views-footer__column">
+
         <mj-text mj-class="views-footer__copyright"
             css-class="views-footer__copyright">
-                Made with pain by&nbsp;<a href="https://github.com/lmironvish">lmironvish</a>.
+                © Your Brand. All Rights Reserved. Made with pain by&nbsp;<a href="https://github.com/lmironvish">lmironvish</a>.
         </mj-text>
 
   </mj-column >
