feat: add footer

--- a/source/mjml/global/attributes.mjml
+++ b/source/mjml/global/attributes.mjml
@@ -187,9 +187,11 @@
 
   <mj-class name="views-best-disc__column"         width="300px"/>
 
-  <mj-class name="views-best-disc__img-prev"       width="220px"/>
+  <mj-class name="views-best-disc__img-prev"       width="220px"
+                                                   />
 
-  <mj-class name="views-best-disc__img"            width="180px"/>
+  <mj-class name="views-best-disc__img"            width="180px"
+                                                   padding="10px"/>
 
   <mj-class name="head"                            font-family="Oswald, Verdana, Geneva, sans-serif"
                                                    font-size="22px"
@@ -268,6 +270,10 @@
   <mj-class name="views-footer__img-return"        width="40px"
                                                    padding="10px"/>
 
+  <mj-class name="views-footer__img-logo"          width="120px"
+                                                   padding="10px 20px"
+                                                   align="left"/>
+
   <mj-class name="views-footer__caption"           font-family="Verdana, Geneva, sans-serif"
                                                    font-size="12px"
                                                    font-style="normal"
@@ -277,9 +283,25 @@
                                                    text-transform="uppercase"
                                                    color="#202020"
                                                    padding-top="14px"
-                                                   padding-left="20px"
-                                                   padding-right="20px"
-                                                   padding-bottom="0px"/>
+                                                   padding-bottom="10px"
+                                                   padding-left="10px"
+                                                   padding-right="10px"/>
+
+  <mj-class name="views-footer__social"            icon-size="32px"
+                                                   align="right"/>
+
+  <mj-class name="views-footer__column-social"     width="300px"/>
+
+
+  <mj-class name="views-footer__copyright"         font-family="Verdana, Geneva, sans-serif"
+                                                   font-size="12px"
+                                                   font-style="normal"
+                                                   font-weight="400"
+                                                   line-height="20px"
+                                                   text-align="left"
+                                                   align="left"
+                                                   color="#7b7b7b"
+                                                   padding="10px 20px"/>
 
 
 </mj-attributes>
