--- a/source/mjml/views/views-footer.mjml
+++ b/source/mjml/views/views-footer.mjml
@@ -1,11 +1,11 @@
-<mj-section mj-class="views-footer pb10 pt10"
-            css-class="views-footer pb10 pt10">
+<mj-section mj-class="views-footer"
+            css-class="views-footer">
 
-  <mj-column mj-class="views-footer__column"
-              css-class="views-footer__column">
+  <mj-column mj-class="views-footer__column pb10 pt10"
+              css-class="views-footer__column pb10 pt10">
 
-      <mj-image mj-class="views-footer__img-div alt-img"
-            css-class="views-footer__img-div alt-img"
+      <mj-image mj-class="views-footer__img-div alt-img pb10 pt10"
+            css-class="views-footer__img-div alt-img pb10 pt10"
 
             src="{{{views-footer__img-div.src}}}"
             title="{{{views-footer__img-div.title}}}"
@@ -18,6 +18,7 @@
 <mj-section mj-class="views-footer__advantages"
             css-class="views-footer__advantages">
 
+<mj-group>
   <mj-column mj-class="views-footer__column-delivery"
               css-class="views-footer__column-delivery">
 
@@ -71,13 +72,15 @@
 
   </mj-column >
 
+
+</mj-group>
 </mj-section>
 
 <mj-section mj-class="views-footer pb10 pt10"
             css-class="views-footer pb10 pt10">
 
-  <mj-column mj-class="views-footer__column"
-              css-class="views-footer__column">
+  <mj-column mj-class="views-footer__column-social"
+              css-class="views-footer__column-social">
 
       <mj-image mj-class="views-footer__img-logo alt-img"
             css-class="views-footer__img-logo alt-img"
@@ -88,21 +91,18 @@
 
   </mj-column >
 
-<mj-column mj-class="views-footer__column"
-            css-class="views-footer__column">
+<mj-column mj-class="views-footer__column-social"
+            css-class="views-footer__column-social">
 
         <mj-social mj-class="views-footer__social"
                    css-class="views-footer__social">
-          <mj-social-element src="https://i.postimg.cc/8kXsNSNw/img-tech-facebook.png" href="https://mjml.io/"/>
-          <mj-social-element src="https://i.postimg.cc/J7F7S552/img-tech-twitter.png" href="https://mjml.io/" />
-          <mj-social-element src="https://i.postimg.cc/HLmkBW9W/img-tech-instagram.png" href="https://mjml.io/"/>
-          <mj-social-element src="https://i.postimg.cc/Jn44CTF9/img-tech-linkedin.png" href="https://mjml.io/"/>
+
+          <mj-social-element src="https://i.postimg.cc/BQvDBpQ7/img-guitar-facebook.png" href="https://mjml.io/"/>
+          <mj-social-element src="https://i.postimg.cc/9fyqQNJ0/img-guitar-instagram.png" href="https://mjml.io/"/>
+          <mj-social-element src="https://i.postimg.cc/yNhkH38S/img-guitar-twitter.png" href="https://mjml.io/" />
+
         </mj-social>
   </mj-column>
-  <mj-column mj-class="views-footer__column"
-              css-class="views-footer__column">
-
-  </mj-column >
 
 </mj-section>
 
